frontend es backend osszekotes kezdete + frontend szerkesztes